image-policy-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
 name: k8srequiredregistry
spec:
 crd:
  spec:
   names:
    kind: K8sRequiredRegistry
   validation:
    # Schema for the `parameters` field
    openAPIV3Schema:
     properties:
      image:
       type: string
 targets:
 - target: admission.k8s.gatekeeper.sh
   rego: |
    package k8srequiredregistry
    violation[{"msg": msg, "details": {"Registry should be": required}}] {
     input.review.object.kind == "Pod"
     some i
     image := input.review.object.spec.containers[i].image
     required := input.parameters.registry
     not startswith(image,required)
     msg := sprintf("Forbidden registry: %v", [image])
    }
